Revising page layout.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </div>
       </section>
 
-      <section class="py-24 bg-white" style="background-image: url('flex-ui-assets/elements/pattern-white.svg'); background-position: center;"><div class="container px-4 mx-auto">
+      <section class="bg-white" style="background-image: url('flex-ui-assets/elements/pattern-white.svg'); background-position: center;"><div class="container px-4 mx-auto">
           <span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-blue-500 bg-blue-100 font-medium uppercase rounded-9xl">TEAMS</span>
-          <h3 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Help These Teams</h3>
-          <p class="mb-14 md:mb-24 text-lg md:text-xl text-coolGray-500 font-medium">These four teams qualified through state competition to attend OM World Finals.</p>
+
+
           <div class="flex flex-wrap -mx-4">
             <div class="w-full md:w-1/2 lg:w-1/3 xl:w-1/4 px-4 mb-10">
               <div class="max-w-xs mx-auto md:ml-0">
@@ -91,6 +91,37 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="wave-top wave-bottom"><div class="wave wave-top w-full text-coolGray-50">
+          <svg viewbox="0 0 1440 116" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1440 64.5909H1090.08C833.336 64.5909 580.229 -7.62939e-06 360 -7.62939e-06C139.771 -7.62939e-06 0 64.5909 0 64.5909V116H1440V64.5909Z" fill="currentColor"></path></svg></div>
+        <div class="py-16 md:py-24 bg-coolGray-50" style="background-image: url('flex-ui-assets/elements/pattern-light1.svg'); background-position: center;">
+          <div class="container px-4 mx-auto">
+            <div class="flex flex-wrap -mx-4">
+              <div class="w-full lg:w-1/2 px-4 mb-5 lg:mb-0">
+                <span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-blue-500 bg-blue-100 font-medium uppercase rounded-9xl">LEARN MORE</span>
+                <h3 class="mb-5 text-3xl md:text-4xl text-coolGray-900 font-bold tracking-tighter">2022 Odyssey of the Mind World Finals</h3>
+                <p class="mb-6 text-lg md:text-xl leading-8 text-coolGray-500 font-semibold">The Cape Henlopen School District is proud to announce that four of our local elementary school teams (Milton ES and Rehoboth ES) have advanced to the Odyssey of the Mind World Finals competition. The competition will take place May 25th-29th in Ames, Iowa. Our students are thrilled to represent the Cape Region at this prestigious event.</p>
+                <p class="mb-5 text-lg font-medium leading-7 text-coolGray-500">Odyssey of the Mind (OM) teaches students to develop and use their natural creativity to become problem-solvers. Students are faced with a problem in need of an original solution and then present their solution to judges. These skills can then be applied to real life and are the exact skills business owners are seeking in today’s graduates. OM emphasizes teamwork, budgeting, time management, public speaking and so much more.</p>
+                <p class="mb-5 text-lg font-medium leading-7 text-coolGray-500">Today our Milton and Rehoboth Elementary teams are seeking to raise $30,000 to assure all students can attend World Finals. Funds will help cover room and board as well as airline tickets. The cost per student is over $1,500. All funds raised will be split evenly between the four teams.
+                </p>
+                <p class="text-lg font-medium leading-7 text-coolGray-500">Please support this opportunity for our students with a pledge amount below. You will be helping to make a difference in our local community. All funds will need to be received by April 25th.</p>
+              </div>
+              <div class="w-full lg:w-1/2 px-4">
+                <p class="mb-5 text-lg font-medium leading-7 text-coolGray-500">
+                  <button class="inline-block py-3 px-6 leading-none text-white bg-indigo-500 hover:bg-indigo-600 rounded shadow">Primary button</button>
+
+                </p><ol class="mb-5 list-decimal list-inside text-lg font-medium leading-7 text-coolGray-500">
+
+
+                </ol><p></p>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="wave wave-bottom w-full text-coolGray-50">
+          <svg viewbox="0 0 1440 116" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 51.4091H349.922C606.664 51.4091 859.771 116 1080 116C1300.23 116 1440 51.4091 1440 51.4091V0H0V51.4091Z" fill="currentColor"></path></svg></div>
       </section>
 
       <section class="py-24 bg-white" style="background-image: url('flex-ui-assets/elements/pattern-white.svg'); background-position: center;"><div class="container px-4 mx-auto">
