--- a/index.html
+++ b/index.html
@@ -40,28 +40,45 @@
 </link>
 
 <script src="js/main.js"></script>
+
 <script src="https://unpkg.com/flowbite@1.4.1/dist/flowbite.js"></script>
 
 <!-- Alert -->
+
 <div class="bg-red-600">
   <div class="max-w-7xl mx-auto py-3 px-3 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between flex-wrap">
       <div class="w-0 flex-1 flex items-center">
         <span class="flex p-2 rounded-lg bg-red-800">
           <!-- Heroicon name: outline/speakerphone -->
-          <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z" />
+
+          <svg
+            class="h-6 w-6 text-white"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            aria-hidden="true">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z">
+            </path>
           </svg>
         </span>
+
         <p class="ml-3 font-medium text-white truncate">
-          <span class="md:hidden"> We announced a new product! </span>
-          <span class="hidden md:inline"> This is a WIP for approval purposes. Copy / images are subject to revsion.</span>
+          <span class="md:hidden">We announced a new product!</span>
+
+          <span class="hidden md:inline">
+            This is a WIP for approval purposes. Copy / images are subject to revsion.
+          </span>
         </p>
       </div>
     </div>
   </div>
 </div>
-
 
 <div class>
   <section
@@ -114,41 +131,55 @@
                 Learn More
               </a>
 
-              <button class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm" type="button" data-modal-toggle="defaultModal">
-              Donate Now
+              <button
+                class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
+                type="button"
+                data-modal-toggle="defaultModal">
+                Donate Now
               </button>
 
-              <div id="defaultModal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full justify-center items-center">
-              <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
+              <div
+                id="defaultModal"
+                class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full justify-center items-center"
+                tabindex="-1"
+                aria-hidden="true">
+                <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
+                  <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                    <div class="flex justify-between items-start p-5 rounded-t border-b dark:border-gray-600">
+                      <h3 class="text-xl font-semibold text-gray-900 lg:text-2xl dark:text-white">
+                        Make a Donation
+                      </h3>
 
-              <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                      <button
+                        class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                        type="button"
+                        data-modal-toggle="defaultModal">
+                        <svg
+                          class="w-5 h-5"
+                          fill="currentColor"
+                          viewBox="0 0 20 20"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            fill-rule="evenodd"
+                            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                            clip-rule="evenodd">
+                          </path>
+                        </svg>
+                      </button>
+                    </div>
 
-              <div class="flex justify-between items-start p-5 rounded-t border-b dark:border-gray-600">
-              <h3 class="text-xl font-semibold text-gray-900 lg:text-2xl dark:text-white">
-              Terms of Service
-              </h3>
-              <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-toggle="defaultModal">
-              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-              </button>
-              </div>
+                    <div class="p-6 space-y-6">
+                      <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+                        This is where the donation form will be embeded or the link will take you out to a secure donation services (paypal or similar).
+                      </p>
 
-              <div class="p-6 space-y-6">
-              <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-              With less than a month to go before the European Union enacts new consumer privacy laws for its citizens, companies around the world are updating their terms of service agreements to comply.
-              </p>
-              <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-              The European Union’s General Data Protection Regulation (G.D.P.R.) goes into effect on May 25 and is meant to ensure a common set of data rights in the European Union. It requires organizations to notify users as soon as possible of high-risk data breaches that could personally affect them.
-              </p>
+                      <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+                        Instructions for check donations can be here as well.
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
-
-              <div class="flex items-center p-6 space-x-2 rounded-b border-t border-gray-200 dark:border-gray-600">
-              <button data-modal-toggle="defaultModal" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">I accept</button>
-              <button data-modal-toggle="defaultModal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">Decline</button>
-              </div>
-              </div>
-              </div>
-              </div>
-
             </div>
           </div>
         </div>
@@ -259,7 +290,9 @@
     </div>
   </section>
 
-  <section class="wave-top wave-bottom" id="learn">
+  <section
+    id="learn"
+    class="wave-top wave-bottom">
     <div class="wave wave-top w-full text-coolGray-50">
       <svg
         viewBox="0 0 1440 116"
@@ -323,8 +356,12 @@
                 class="rounded shadow-md mb-5"
                 alt
                 src="images/iowa-state.jpg"/>
-              <button class="inline-block py-3 px-6 leading-none text-white bg-blue-500 hover:bg-blue-600 rounded shadow">
-                Donate Now!
+
+              <button
+                class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
+                type="button"
+                data-modal-toggle="defaultModal">
+                Donate Now
               </button>
             </p>
 
@@ -372,7 +409,6 @@
       <div class="flex flex-wrap -mx-4">
         <div class="w-full md:w-1/2 lg:w-3/5 px-4 mb-16">
           <div class="relative h-full px-8 pt-14 pb-8">
-
             <h3 class="mb-4 text-xl md:text-3xl font-bold">We are a welcoming bunch!</h3>
 
             <p class="text-coolGray-500 font-medium">
@@ -381,22 +417,34 @@
 
             <ul class="text-coolGray-500 list-disc list-inside my-3">
               <li>Program coordiantor</li>
+
               <li>Coaches</li>
+
               <li>Parent supportor</li>
-            <ul>
 
-            <p class="text-coolGray-500 my-3">Connect with us to volunteer: <a href="mailto:">someone@somewhere.com</a></p>
+              <ul>
+                <p class="text-coolGray-500 my-3">
+                  Connect with us to volunteer:
 
-            <hr class="my-5">
+                  <a href="mailto:">someone@somewhere.com</a>
+                </p>
 
-            <h4 class="text-black mb-4 text-xl md:text-xl font-bold">April 29th - Crust & Craft</h4>
+                <hr class="my-5"></hr>
 
-            <p class="text-coolGray-500 my-3">Join us for lunch or dinner at Crust & Craft in Lewes. They'll be donating 10% of sales to the Cape Henlopen OM program. Woot!</p>
+                <h4 class="text-black mb-4 text-xl md:text-xl font-bold">
+                  April 29th - Crust & Craft
+                </h4>
+
+                <p class="text-coolGray-500 my-3">
+                  Join us for lunch or dinner at Crust & Craft in Lewes. They'll be donating 10% of
+                  sales to the Cape Henlopen OM program. Woot!
+                </p>
+              </ul>
+            </ul>
           </div>
         </div>
 
         <div class="w-full md:w-1/2 lg:w-2/5 px-4 mb-16">
-
           <div class="w-full px-4 mb-16">
             <div class="relative px-8 pt-14 pb-8 bg-coolGray-50 rounded-md shadow-md">
               <div class="absolute top-0 left-1/2 transform -translate-y-1/2 -translate-x-1/2 inline-flex items-center justify-center h-16 w-16 bg-white rounded-full">
@@ -408,12 +456,15 @@
               <h3 class="md:w-64 mb-4 text-lg md:text-xl font-bold">Make a Donation</h3>
 
               <p class="text-coolGray-500 font-medium">
-                Make a fully tax deductible donation to the Cape Henlopen Odyssey of the Mind program.
-
-
+                Make a fully tax deductible donation to the Cape Henlopen Odyssey of the Mind
+                program.
               </p>
-              <button class="inline-block my-3 py-3 px-6 leading-none text-white bg-blue-500 hover:bg-blue-600 rounded shadow">
-                Donate Now!
+
+              <button
+                class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
+                type="button"
+                data-modal-toggle="defaultModal">
+                Donate Now
               </button>
             </div>
           </div>
@@ -429,26 +480,19 @@
               <h3 class="md:w-64 mb-4 text-lg md:text-xl font-bold">Sponsor the Program</h3>
 
               <p class="text-coolGray-500 font-medium">
-                Our program serves students throughout the Cape Henlopen School District annually. You can help those students have an expereince of a lifetime!
-
-
+                Our program serves students throughout the Cape Henlopen School District annually.
+                You can help those students have an expereince of a lifetime!
               </p>
 
               <button class="inline-block my-3 py-3 px-6 leading-none text-blue-800 hover:text-white bg-white border-2 border-blue-500 hover:bg-blue-600 rounded shadow">
                 Sign-up to Sponsor
               </button>
-
             </div>
           </div>
-
         </div>
-
-
-
       </div>
     </div>
   </section>
-
 
   <section
     class="py-20 xl:pt-24 bg-white"
