--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               src="flex-ui-assets/logos/flex-circle-red.svg"/>
             <h3 class="mb-1 text-lg text-coolGray-800 font-semibold">Rehoboth Elementary</h3>
 
-            <span class="inline-block mb-4 text-lg font-medium text-blue-500">TBD</span>
+            <span class="inline-block mb-4 text-lg font-medium text-blue-500">3rd Grade</span>
 
             <p class="mb-4 text-coolGray-500 font-medium">
               Turpis egestas pretium aenean pharetra magna. At erat pellentesque adipiscing commodo.
@@ -271,7 +271,7 @@
               src="flex-ui-assets/logos/flex-circle-violet.svg"/>
             <h3 class="mb-1 text-lg text-coolGray-800 font-semibold">Rehoboth Elementary</h3>
 
-            <span class="inline-block mb-4 text-lg font-medium text-blue-500">TBD</span>
+            <span class="inline-block mb-4 text-lg font-medium text-blue-500">5th Grade</span>
 
             <p class="mb-4 text-coolGray-500 font-medium">
               Vestibulum morbi blandit cursus risus at ultrices mi tempus.
@@ -432,6 +432,14 @@
                 <hr class="my-5"></hr>
 
                 <h4 class="text-black mb-4 text-xl md:text-xl font-bold">
+                  April 10th - Shell We Bounce Car Wash (10AM - 4PM)
+                </h4>
+
+                <p class="text-coolGray-500 my-3">
+                  Stop by to have the polish put on your ride by our energetic teams.
+                </p>
+
+                <h4 class="text-black mb-4 text-xl md:text-xl font-bold">
                   April 29th - Crust & Craft
                 </h4>
 
@@ -439,6 +447,8 @@
                   Join us for lunch or dinner at Crust & Craft in Lewes. They'll be donating 10% of
                   sales to the Cape Henlopen OM program. Woot!
                 </p>
+
+
               </ul>
             </ul>
           </div>
