--- a/index.html
+++ b/index.html
@@ -131,55 +131,12 @@
                 Learn More
               </a>
 
-              <button
+              <a
                 class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
-                type="button"
-                data-modal-toggle="defaultModal">
+                href="https://fs26.formsite.com/inclind/g8uqlkw2om/index.html"
+                target="_blank">
                 Donate Now
-              </button>
-
-              <div
-                id="defaultModal"
-                class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full justify-center items-center"
-                tabindex="-1"
-                aria-hidden="true">
-                <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
-                  <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                    <div class="flex justify-between items-start p-5 rounded-t border-b dark:border-gray-600">
-                      <h3 class="text-xl font-semibold text-gray-900 lg:text-2xl dark:text-white">
-                        Make a Donation
-                      </h3>
-
-                      <button
-                        class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                        type="button"
-                        data-modal-toggle="defaultModal">
-                        <svg
-                          class="w-5 h-5"
-                          fill="currentColor"
-                          viewBox="0 0 20 20"
-                          xmlns="http://www.w3.org/2000/svg">
-                          <path
-                            fill-rule="evenodd"
-                            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                            clip-rule="evenodd">
-                          </path>
-                        </svg>
-                      </button>
-                    </div>
-
-                    <div class="p-6 space-y-6">
-                      <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-                        This is where the donation form will be embeded or the link will take you out to a secure donation services (paypal or similar).
-                      </p>
-
-                      <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-                        Instructions for check donations can be here as well.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
@@ -356,13 +313,12 @@
                 class="rounded shadow-md mb-5"
                 alt
                 src="images/iowa-state.jpg"/>
-
-              <button
+              <a
                 class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
-                type="button"
-                data-modal-toggle="defaultModal">
+                href="https://fs26.formsite.com/inclind/g8uqlkw2om/index.html"
+                target="_blank">
                 Donate Now
-              </button>
+              </a>
             </p>
 
             <ol class="mb-5 list-decimal list-inside text-lg font-medium leading-7 text-coolGray-500">
@@ -447,8 +403,6 @@
                   Join us for lunch or dinner at Crust & Craft in Lewes. They'll be donating 10% of
                   sales to the Cape Henlopen OM program. Woot!
                 </p>
-
-
               </ul>
             </ul>
           </div>
@@ -470,12 +424,12 @@
                 program.
               </p>
 
-              <button
+              <a
                 class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
-                type="button"
-                data-modal-toggle="defaultModal">
+                href="https://fs26.formsite.com/inclind/g8uqlkw2om/index.html"
+                target="_blank">
                 Donate Now
-              </button>
+              </a>
             </div>
           </div>
 
