Adding MES 4th grade.

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <p class="mb-4 text-coolGray-500 font-medium">
               Awarded a perfect score of 350 the "Rubber Duckies" are leading the State of Delaware
-              to Iowa
+              to Iowa.
             </p>
           </div>
         </div>
@@ -195,11 +195,10 @@
               src="flex-ui-assets/logos/flex-circle-green.svg"/>
             <h3 class="mb-1 text-lg text-coolGray-800 font-semibold">Milton Elementary</h3>
 
-            <span class="inline-block mb-4 text-lg font-medium text-blue-500">TBD</span>
+            <span class="inline-block mb-4 text-lg font-medium text-blue-500">4th Grade</span>
 
             <p class="mb-4 text-coolGray-500 font-medium">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua.
+              "The Fossilizers" will be delivering a musical production of the first female paleontologist, entitled 'Mary Anning: The Musical.' in Iowa.
             </p>
           </div>
         </div>
