--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <p class="mb-4 text-coolGray-500 font-medium">
               Awarded a perfect score of 350 the "Rubber Duckies" are leading the State of Delaware
-              to Iowa.
+              to Iowa with their circus act.
             </p>
           </div>
         </div>
@@ -198,7 +198,8 @@
             <span class="inline-block mb-4 text-lg font-medium text-blue-500">4th Grade</span>
 
             <p class="mb-4 text-coolGray-500 font-medium">
-              "The Fossilizers" will be delivering a musical production of the first female paleontologist, entitled 'Mary Anning: The Musical.' in Iowa.
+              "The Fossilizers" will be delivering a musical production of the first female paleontologist,
+              entitled 'Mary Anning: The Musical.' in Iowa.
             </p>
           </div>
         </div>
