--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <span class="md:hidden">We announced a new product!</span>
 
           <span class="hidden md:inline">
-            This is a WIP for approval purposes. Copy / images are subject to revsion.
+            Iowa here we come!
           </span>
         </p>
       </div>
