Updating emails and sponsors.

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <p class="text-coolGray-500 my-3">
                   Connect with us to volunteer:
 
-                  <a href="mailto:">someone@somewhere.com</a>
+                  <a href="mailto:Teresa.Waddell@cape.k12.de.us">Teresa.Waddell@cape.k12.de.us</a>
                 </p>
 
                 <hr class="my-5"></hr>
@@ -448,9 +448,10 @@
                 You can help those students have an expereince of a lifetime!
               </p>
 
-              <button class="inline-block my-3 py-3 px-6 leading-none text-blue-800 hover:text-white bg-white border-2 border-blue-500 hover:bg-blue-600 rounded shadow">
+              <a href="mailto:Teresa.Waddell@cape.k12.de.us"
+                class="inline-block my-3 py-3 px-6 leading-none text-blue-800 hover:text-white bg-white border-2 border-blue-500 hover:bg-blue-600 rounded shadow">
                 Sign-up to Sponsor
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -482,7 +483,7 @@
             <img
               class="mx-auto"
               alt
-              src="flex-ui-assets/brands/logo-clouds/jiggle-logo.svg"/>
+              src="images/chsd.png"/>
           </div>
         </div>
 
@@ -491,7 +492,7 @@
             <img
               class="mx-auto"
               alt
-              src="flex-ui-assets/brands/logo-clouds/symtric-logo.svg"/>
+              src="images/sponsor-placeholder.jpeg"/>
           </div>
         </div>
 
@@ -500,7 +501,7 @@
             <img
               class="mx-auto"
               alt
-              src="flex-ui-assets/brands/logo-clouds/wishelp-logo.svg"/>
+              src="images/sponsor-placeholder.jpeg"/>
           </div>
         </div>
 
@@ -509,7 +510,7 @@
             <img
               class="mx-auto"
               alt
-              src="flex-ui-assets/brands/logo-clouds/resecurb-logo.svg"/>
+              src="images/sponsor-placeholder.jpeg"/>
           </div>
         </div>
 
@@ -518,7 +519,7 @@
             <img
               class="mx-auto"
               alt
-              src="flex-ui-assets/brands/logo-clouds/welytics-logo.svg"/>
+              src="images/sponsor-placeholder.jpeg"/>
           </div>
         </div>
       </div>
