--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <span class="md:hidden">We announced a new product!</span>
 
           <span class="hidden md:inline">
-            Iowa here we come!
+            Iowa here we come! Help support our local teams!
           </span>
         </p>
       </div>
