RES 3rd grade copy.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <span class="inline-block mb-4 text-lg font-medium text-blue-500">3rd Grade</span>
 
             <p class="mb-4 text-coolGray-500 font-medium">
-              Turpis egestas pretium aenean pharetra magna. At erat pellentesque adipiscing commodo.
+              Team Thinky Feet is a spirited group of third graders singing and dancing their way to the World Stage!
             </p>
           </div>
         </div>
