Adding donation letter.

--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@
                 target="_blank">
                 Donate Now
               </a>
+
+              <p>Download our <a href="/docs/capeom-letter.pdf" target="_blank">donation letter</a> if that is easier!</p>
             </div>
           </div>
 
