--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
 
               <a
                 class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
-                href="https://fs26.formsite.com/inclind/g8uqlkw2om/index.html"
-                target="_blank">
+                href="#participate">
                 Donate Now
               </a>
             </div>
@@ -345,7 +344,7 @@
 
   <section
     class="py-24 bg-white"
-    style="background-image: url('flex-ui-assets/elements/pattern-white.svg'); background-position: center;">
+    style="background-image: url('flex-ui-assets/elements/pattern-white.svg'); background-position: center;" id="participate">
     <div class="container px-4 mx-auto">
       <div class="max-w-5xl mx-auto text-center mb-16 md:mb-24">
         <span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-blue-500 bg-blue-100 font-medium uppercase rounded-full shadow-sm">
@@ -404,6 +403,14 @@
                   Stop by to have the polish put on your ride by our energetic teams.
                 </p>
 
+                <h4 class="text-black mb-4 text-xl md:text-xl font-bold">
+                  April 13th - BINGO Night at Cape High School (6PM - 9PM)
+                </h4>
+
+                <p class="text-coolGray-500 my-3">
+                  Come out for a night of family fun and support the Cape Henlopen School District Odyssey of the Mind Teams. Pay $20 for unlimited games or $5 per game. We will have pizza, snacks and baked goods for sale!
+                </p>
+
 
               </ul>
             </ul>
@@ -427,13 +434,13 @@
               </p>
 
               <a
-                class="inline-flex items-center justify-center px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
+                class="inline-flex items-center justify-center my-5 px-7 py-3 h-14 w-full md:w-auto text-lg leading-7 text-blue-50 bg-blue-500 hover:bg-blue-600 font-medium focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 border border-transparent rounded-md shadow-sm"
                 href="https://fs26.formsite.com/inclind/g8uqlkw2om/index.html"
                 target="_blank">
                 Donate Now
               </a>
 
-              <p>Download our <a href="/docs/capeom-letter.pdf" target="_blank">donation letter</a> if that is easier!</p>
+              <p class="text-coolGray-500 font-medium">Download our <a class="text-blue-500" href="/docs/capeom-letter.pdf" target="_blank">donation letter</a> if that is easier!</p>
             </div>
           </div>
 
