--- a/index.html
+++ b/index.html
@@ -391,8 +391,16 @@
                 </h4>
 
                 <p class="text-coolGray-500 my-3">
-                  Join us for lunch or dinner at Crust & Craft in Lewes. They'll be donating 10% of
+                  Join us for lunch / dinner or takeout at Crust & Craft in Lewes. They'll be donating 10% of
                   sales to the Cape Henlopen OM program. Woot!
+                </p>
+
+                <h4 class="text-black mb-4 text-xl md:text-xl font-bold">
+                  April 21st - Arena's
+                </h4>
+
+                <p class="text-coolGray-500 my-3">
+                  10% of all day proceeds / all locations will go to the OM Teams.
                 </p>
 
               </ul>
