Updating the RES team.

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <span class="inline-block mb-4 text-lg font-medium text-blue-500">5th Grade</span>
 
             <p class="mb-4 text-coolGray-500 font-medium">
-              Vestibulum morbi blandit cursus risus at ultrices mi tempus.
+              Mind Waves, the 5th grade team, has a humor and rap filled skit for Problem 2 and are looking forward to showing off their skills in Iowa!
             </p>
           </div>
         </div>
