--- a/index.html
+++ b/index.html
@@ -387,20 +387,19 @@
                 <hr class="my-5"></hr>
 
                 <h4 class="text-black mb-4 text-xl md:text-xl font-bold">
-                  April 8th - Crust & Craft
-                </h4>
-
-                <p class="text-coolGray-500 my-3">
-                  Join us for lunch / dinner or takeout at Crust & Craft in Lewes. They'll be donating 10% of
-                  sales to the Cape Henlopen OM program. Woot!
-                </p>
-
-                <h4 class="text-black mb-4 text-xl md:text-xl font-bold">
                   April 21st - Arena's
                 </h4>
 
                 <p class="text-coolGray-500 my-3">
                   10% of all day proceeds / all locations will go to the OM Teams.
+                </p>
+
+                <h4 class="text-black mb-4 text-xl md:text-xl font-bold">
+                  April 26th - The Pines
+                </h4>
+
+                <p class="text-coolGray-500 my-3">
+                  10% of the total proceeds will go to our OM teams, so come with the kids for dinner or make it an adult night out.
                 </p>
 
               </ul>
